增加打印当前时间

--- a/SimpleLogger/SimpleLogger.vcxproj.filters
+++ b/SimpleLogger/SimpleLogger.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Logger.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Clock.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
