--- a/SimpleLogger/SimpleLogger.vcxproj
+++ b/SimpleLogger/SimpleLogger.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Clock.h" />
     <ClInclude Include="Logger.h" />
   </ItemGroup>
   <ItemGroup>
