--- a/SimpleLogger/SimpleLogger.vcxproj.filters
+++ b/SimpleLogger/SimpleLogger.vcxproj.filters
@@ -21,12 +21,15 @@
     <ClCompile Include="Logger.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TimePoint.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logger.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Clock.h">
+    <ClInclude Include="TimePoint.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
